--- a/extension/panel/panel.css
+++ b/extension/panel/panel.css
@@ -64,7 +64,7 @@ li:active {
 kbd {
     font-family: inherit;
     font-size: 0.7rem;
-    color: rgb(130, 130, 130);
+    color: rgb(160, 160, 160);
     background: rgb(30, 30, 30);
     padding: 1px 5px;
     border-radius: 3px;
